# Stepik

./: .gitignore  README.md
projects/fastapi_ecommerce/: .gitignore  alembic.ini  ecommerce.db  pyproject.toml
projects/fastapi_ecommerce/app/: alembic.ini  auth.py  config.py  database.py  db_depends.py  ecommerce.db  main.py  schemas.py  schemas_old.py  utils.py
projects/fastapi_ecommerce/app/backend/: db.py  db_depends.py
projects/fastapi_ecommerce/app/migrations/: env.py
projects/fastapi_ecommerce/app/migrations/versions/: 04c5ef986801_create_user_model.py  2025_11_03_1842-53051303736c_create_categories_and_products_tables.py  2025_11_10_1227-9560bf0a1c3a_initial_migration_for_postgresql.py  2025_11_15_1122-e7921bd08210_add_user_model.py  2025_11_23_2153-a963e4209109_add_review_model.py  2025_11_24_1253-fbf1b74f755b_add_rating_column_to_product_model.py  2025_11_24_1849-e54f1116575b_add_categories_table.py  2025_11_24_1852-a4b76e4748bb_add_products_table.py  2025_11_24_1922-3ae3b97e20ec_add_users_table.py  2025_11_24_1933-de8bb6a90e52_add_reviews_table.py  2025_11_24_1935-f0cce2ce7e75_add_rating_column_in_product_table.py  2025_11_26_1253-d723c8853f3c_add_rating_column_in_product_table.py  2025_11_26_1253-d723c8853f3c_add_rating_column_in_products_table.py  (+6 more)
projects/fastapi_ecommerce/app/models/: __init__.py  cart_items.py  categories.py  category.py  orders.py  product.py  products.py  review.py  reviews.py  users.py
projects/fastapi_ecommerce/app/routers/: __init__.py  auth.py  cart.py  categories.py  category.py  orders.py  permission.py  products.py  reviews.py  users.py
projects/fastapi_ecommerce/app/schemas/: cart.py  categories.py  orders.py  products.py  reviews.py  users.py
src/python/6.3_tuple/: 1.py  (+5 more)
(+1015 files in other folders)
